[metadata]
name = planky
version = attr: planky.VERSION
author = Joel Stansbury
license = MIT
long_description = file: README.rst
description = Concave Hull estimation
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
packages =
    planky
install_requires =
    numpy
